--- a/IISCI.csproj
+++ b/IISCI.csproj
@@ -75,7 +75,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Script\CameraRot.cs" />
     <Compile Include="Assets\Script\Generator.cs" />
+    <Compile Include="Assets\Script\LineRender.cs" />
+    <Compile Include="Assets\Script\MainController.cs" />
+    <Compile Include="Assets\Script\MoveController.cs" />
     <Compile Include="Assets\Script\Scanner.cs" />
     <Compile Include="Assets\Script\TrackBuilder.cs" />
   </ItemGroup>
