--- a/IISCI.csproj
+++ b/IISCI.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Assets\Script\MoveController.cs" />
     <Compile Include="Assets\Script\Scanner.cs" />
     <Compile Include="Assets\Script\TrackBuilder.cs" />
+    <Compile Include="Assets\Script\UIController.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
